# BitcoinDuneQueries

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  base_lending_refactor_runbook.md  base_query_audit_mcp_first_2026-03-11.md  base_query_audit_mcp_live_2026-03-11.md  dashboard_brief_human_factor_cohort_matrix.md  dune_database_schemas.md  dune_mcp_integration_plan.md  queries_schemas.md
outputs/: base_lending_intent_kpi_report.md  base_mcp_execution_inventory.json  coverage_sanity.csv
queries/: registry.base.json  registry.ethereum.json  registry.json
scripts/: README.md  __init__.py  dune_client.py  registry_manager.py  run_base_full_refresh.sh  smoke_runner.py  validators.py
sql/: base_lending_intent_daily.sql  signal_borrow_events.sql  signal_borrow_outflows.sql  signal_coverage_sanity.sql  signal_loop_significance_fast.sql  signal_loop_significance_probe.sql
src/: coverage_check.py  dune_client.py
tests/: base_lending_action_ledger_aave_v3_smoke.sql  base_lending_action_ledger_morpho_smoke.sql  base_lending_action_ledger_unified_smoke.sql  base_lending_collateral_ledger_smoke.sql  base_lending_entity_balance_sheet_smoke.sql  base_lending_entity_loop_storyboard_smoke.sql  base_lending_flow_stitching_smoke.sql  base_lending_loop_collateral_profile_smoke.sql  base_lending_loop_detection_smoke.sql  base_lending_loop_metrics_daily_smoke.sql  base_lending_sankey_flows_smoke.sql  bitcoin_cohort_matrix_drilldown_smoke.sql  bitcoin_human_factor_cohort_matrix_smoke.sql  bitcoin_tx_features_daily_smoke.sql  (+12 more)
(+37 files in other folders)
